@@ -15,6 +15,10 @@ Core and builtins
 Library
 -------
 
+- Bug #1433694: minidom's .normalize() failed to set .nextSibling for
+  last child element.
+
+
 Extension Modules
 -----------------
 
